big update, delete product option, add product variant
